# synsense-log

./: .gitignore  main.py  pyproject.toml
experiments/2026-04-16_heading_v1/: REPORT.md
scripts/: check_connectivity.py  deploy_and_run.py  eval_confusion.py  gen_heading_dataset.py  plot_diagnostics.py  train_heading.py  view_dvs_stream.py
src/heading_net/: __init__.py  config.py  dataset.py  model.py
