[project]
name = "synsense-log"
version = "0.1.0"
description = "Experiments and connectivity logs for the Synsense Speck2f devkit"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.4.4",
    "sinabs>=3.1.3",
    "samna>=0.48.5",
]

[[tool.uv.index]]
name = "synsense"
url = "https://gitlab.com/api/v4/projects/27423070/packages/pypi/simple"
explicit = true

[tool.uv.sources]
samna = { index = "synsense" }
